# words-counter-benchmarks-game

./: .dir-locals.el  README.md  README.org  bootstrap.sh  conanfile.txt  meson.build  meson.options  run-words-counter-implementations.sh  wikipedia_resources.tar.bz2
benchmarks/: benchmarks.cpp  meson.build
benchmarks/resources/: AA_wiki_00.txt
benchmarks/scripts/: download_wiki.sh
conan/profiles/: clang16_darwin  clang17_darwin  clang17_macos  gcc12_linux  gcc13_macos
meson/native/buildtypes/: release.ini
meson/native/compilers/: clang-15-homebrew.ini  clang16_darwin.ini  gcc13_macos.ini  gcc_11.ini
programs/: meson.build  words_counter.cpp
src/: cw_config.hpp.in  meson.build
src/algo_stages/: count_words.hpp  read_input.cpp  read_input.hpp  split_words.hpp
src/count_words/: count_words.cpp  count_words.hpp  cw_api.hpp
src/implementations/words_counter/: words_counter_from_free_function.hpp
src/interfaces/: words_counter.hpp
src/string/: immutable_string.hpp
src/timing/: profile.cpp  profile.hpp  scoped_timer.hpp  time_it.hpp
src/types/: cw_types.hpp  dynamic_buffer.hpp
test/: bench_count_words.cpp  meson.build
